Fix bugs and polish
Fixed panorama movement on mobile. Fixed a bug with giving nodes names that are already in use. Fixed a bug where the node editor and viewer would appear under the top left buttons on mobile. Improved the panorama loading transition. Improved the line width for 1080p screens. Darkened the color scheme.

--- a/common/styles/variables.scss
+++ b/common/styles/variables.scss
@@ -6,8 +6,8 @@
 
 
 :root {
-	--background-color: rgb(39, 39, 39);
-	--section-color: rgba(0, 0, 0, .5);
+	--background-color: rgb(22, 22, 22);
+	--section-color: rgba(0, 0, 0, .75);
 	--text-color: rgba(255, 255, 255);
 	--accent-color: rgba(255, 255, 0);
 	--selection-color: rgba(255, 255, 0, .25);
@@ -15,7 +15,7 @@
 	--small-gap: 1rem;
 	--medium-gap: 2rem;
 	--input-height: 2.3rem;
-	--line-width: .12rem;
+	--line-width: .13rem;
 	--double-line-width: calc(var(--line-width) * 2);
 
 	--medium-transition-duration: 80ms;
